<resources>
    <string name="app_name">iBAE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Vendre</string>
    <string name="title_param">Paramètres</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="repeter_mdp">Répétez votre mot de passe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register">S\'inscrire</string>
    <string name="login_connexion">Connexion</string>
    <string name="login_name">Nom d\'utilisateur</string>
    <string name="login_passwd">Mot de passe</string>
    <string name="home_welcome">Bienvenue</string>
    <string name="home_message">Qu\'est ce que vous avez bien envie d\'acheter aujourd\'hui ?</string>
    <string name="home_search">Ma recherche</string>
    <string name="home_btn_search">Je veux dépenser de l\'argent</string>
    <string name="sell_btn_valid">Mettre en ligne</string>
    <string name="sell_title">Titre de l\'annonce</string>
    <string name="sell_description">Description de l\'article</string>
    <string name="sell_btn_take_photo">Prendre une photo</string>
    <string name="sell_price_init">Prix de départ de l\'enchère</string>
    <string name="sell_btn_get_photo">Sélectionner une photo</string>
    <string name="param_text_ip">IP du serveur (version de dev)</string>
    <string name="ip_hint">XXXX.XXXX.XXXX.XXXX</string>
    <string name="message_update_server">La nouvelle IP du serveur a bien été enregistrée</string>
    <string name="message_annonce_cree">Votre annonce à bien été crée</string>
    <string name="message_annonce_cree_e">Il y a eu un problème lors de la mise en ligne</string>
    <string name="annonce_btn_encherir">JE LE VEUX</string>
    <string name="annonce_et_enchere" >Mon enchère</string>
    <string name="message_enchere_radine">Non mais t\'as cru quoi ?</string>
    <string name="message_enchere_erreur">Il y a eu une erreur lors de votre enchère</string>
    <string name="message_enchere">Votre enchère est bien prise en compte ! Bonne chance !</string>
    <string name="message_fini">L\'enchère n\'est plus disponible ! Dommage !</string>
    <string name="annonce_text_vendu">Vendu par :</string>

</resources>
