<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VendreFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sell_btn_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/sell_btn_valid"
            android:onClick="clickVendre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_price_init" />

        <EditText
            android:id="@+id/sell_title"
            android:layout_width="294dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/sell_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sell_description"
            android:layout_width="295dp"
            android:layout_height="92dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/sell_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_title" />

        <Button
            android:id="@+id/sell_btn_get_photo"
            android:layout_width="145dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:onClick="clickAjoutPhoto"
            android:text="@string/sell_btn_take_photo"
            app:layout_constraintEnd_toStartOf="@+id/sell_btn_take_photo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_img" />

        <ImageView
            android:id="@+id/sell_img"
            android:layout_width="169dp"
            android:layout_height="132dp"
            android:layout_marginTop="20dp"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_description" />

        <EditText
            android:id="@+id/sell_price_init"
            android:layout_width="303dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/sell_price_init"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_btn_get_photo" />

        <Button
            android:id="@+id/sell_btn_take_photo"
            android:layout_width="145dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:onClick="clickGetPhoto"
            android:text="@string/sell_btn_get_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sell_btn_get_photo"
            app:layout_constraintTop_toBottomOf="@+id/sell_img" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>