<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AnnonceFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/annonce_btn_encherir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/annonce_btn_encherir"
            android:onClick="clickEncherir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/annonce_img"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="70dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_description" />

        <TextView
            android:id="@+id/annonce_titre"
            android:layout_width="372dp"
            android:layout_height="91dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/annonce_price"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_titre" />

        <TextView
            android:id="@+id/annonce_description"
            android:layout_width="384dp"
            android:layout_height="66dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_price" />

        <TextView
            android:id="@+id/annonce_timeleft"
            android:layout_width="120dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_description" />

        <TextView
            android:id="@+id/annonce_vendeur"
            android:layout_width="131dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_description" />

        <TextView
            android:id="@+id/annonce_lastenchere"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/annonce_titre" />

        <EditText
            android:id="@+id/annonce_et_enchere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/annonce_et_enchere"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/annonce_btn_encherir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/annonce_text_vendu"
            android:layout_width="85dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/annonce_text_vendu"
            app:layout_constraintEnd_toStartOf="@+id/annonce_vendeur"
            app:layout_constraintTop_toBottomOf="@+id/annonce_description" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>